# multi2vec-clip-inference-basket

./: .gitignore  CHANGELOG.md  Dockerfile  app.py  basket.Dockerfile  clip.py  download.py  local_build_and_push  meta.py  package-lock.json  package.json  pyproject.toml
.github/: changelog-config-file.cjs
.github/workflows/: main.yaml
